--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://s3.us-east-1.amazonaws.com/cdn.designcrowd.com/blog/67-programming-logos-to-say-hello-world/web-development-company-logo-by-logocaptain-studio-dribbble.png">
     <script src="https://kit.fontawesome.com/843bef6daf.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
