--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://s3.us-east-1.amazonaws.com/cdn.designcrowd.com/blog/67-programming-logos-to-say-hello-world/web-development-company-logo-by-logocaptain-studio-dribbble.png">
     <script src="https://kit.fontawesome.com/843bef6daf.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Puzan Studio - Creating Awesome Websites</title>
 </head>
 <body>
+    <div class="cursor"></div>
     <div class="container">
         <section class="hero">
             <header>
@@ -21,9 +22,11 @@
                   </nav>
             </header>
             <div class="main">
+                <div class="texts">
                 <h1>I'LL BUILD BRANDS</h1>
                 <h2>WEB DEV</h2>
                 <h5>let's build together</h5>
+            </div>
                 <div class="shapes">
                     <svg class="big-circle" width="554" height="826"  viewBox="0 0 554 826" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect class="shape" x="0.5" y="0.5" width="553" height="825" rx="99.5" stroke="black"/>
