added more changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
+    <link
       rel="icon"
       href="https://s3.us-east-1.amazonaws.com/cdn.designcrowd.com/blog/67-programming-logos-to-say-hello-world/web-development-company-logo-by-logocaptain-studio-dribbble.png"
     />
@@ -33,9 +37,9 @@
         <div class="main">
           <div class="elem elem1">
             <div class="texts">
-                <div class="main-text">
-              <h1>I'LL BUILD BRANDS</h1>
-            </div>
+              <div class="main-text">
+                <h1>I'LL BUILD BRANDS</h1>
+              </div>
               <img
                 src="https://fiddletwix.files.wordpress.com/2017/06/1pxqyo6.gif"
               />
@@ -83,7 +87,17 @@
           <h4>I'll make a revolution in WebDev</h4>
         </div>
       </section>
+      <section class="page2">
+        <img class="fist" src="fist.png" alt="" />
+      </section>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+      integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
       integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
